--- a/index.html
+++ b/index.html
@@ -175,13 +175,13 @@
       font-family: 'Fredoka', sans-serif;
       font-size: 4.5rem;
       font-weight: 700;
-      line-height: 1;
       margin-bottom: 0.75rem;
       background: linear-gradient(135deg, #fff 0%, var(--accent-gold) 100%);
       -webkit-background-clip: text;
       -webkit-text-fill-color: transparent;
       background-clip: text;
       animation: value-pop 0.4s ease-out 0.3s both;
+      text-align: center;
     }
 
     @keyframes value-pop {
@@ -308,7 +308,7 @@
     /* Navigation arrows */
     .nav-arrow {
       position: fixed;
-      top: 50%;
+      top: 90%;
       transform: translateY(-50%);
       width: 44px;
       height: 44px;
@@ -384,16 +384,6 @@
       color: var(--accent-gold);
     }
 
-    /* Swipe hint */
-    .swipe-hint {
-      position: fixed;
-      bottom: 70px;
-      left: 50%;
-      transform: translateX(-50%);
-      font-size: 0.75rem;
-      color: var(--text-secondary);
-      animation: fade-hint 3s ease-out forwards;
-    }
 
     @keyframes fade-hint {
       0%, 70% { opacity: 1; }
@@ -493,9 +483,6 @@
   <div class="timer-bar-container">
     <div class="timer-bar" id="timerBar"></div>
   </div>
-
-  <!-- Swipe hint (shown initially) -->
-  <div class="swipe-hint" id="swipeHint">Swipe or tap arrows to navigate</div>
 
   <script>
     // Generate random stats
