fix first slide

--- a/index.html
+++ b/index.html
@@ -556,7 +556,7 @@
           type: 'intro',
           emoji: '💩',
           label: 'Your 2025',
-          value: 'Shit Year in Review',
+          value: 'Year in Shit',
           description: "Let's look back at your bathroom adventures this year...",
         },
         // Total shits
